fix heading text on mobile to fit width

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,7 +88,7 @@
         margin: auto;
         background-color: white;
     }
-    @media screen and (max-width: 414px) {
+    /*@media screen and (max-width: 414px) {
        #logo { position: relative;
         width: 100%;
         height: 100px;
@@ -97,12 +97,14 @@
         background-repeat: no-repeat;
         margin: auto;
     }
-}
-
+}*/
+    #heading-text {
+        width: 90%;
+    }
     .heading-text {
         color:#efefef; 
-        font-size: 170%;
-        margin-top: 80px; 
+        font-size: 150%;
+        margin-top: 120px; 
         margin-left: 20px;
     }
     .intro-text {
@@ -355,7 +357,12 @@
     }
 
     /*navigation menu*/
-
+    .sticky {
+        position: fixed;
+        width: 100%;
+        z-index: 9;
+        background-color: white;
+    }
     /* Add a background color to the top navigation */
 .topnav {
     background-color: #fff;
@@ -402,17 +409,18 @@
     #logo{
         position: absolute;
         width: 50%;
-        height: 50px;
+        height: 45px;
         background-image: url(https://cdn-bdclh.nitrocdn.com/ZXHaaGpMcRRbVAjcMYUOsikZqTHBAksF/assets/static/optimized/rev-7f76e69/wp-content/uploads/2021/01/reputation_logo_horizontal_dark.png);
         background-position: left;
         background-repeat: no-repeat;
         margin-left: 50px;
         padding-top: 5px;
+        background-color: white;
     }
     .heading-text {
         color:#004f5d; 
         font-size: 240%;
-        margin-top: 20px; 
+        margin-top: 70px; 
         margin-left: 40px;
     }
     .intro-text {
